WIP spaceship controls

--- a/Assets/Gravitas/Scripts/gravitas-main.asmdef
+++ b/Assets/Gravitas/Scripts/gravitas-main.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Gravitas",
     "references": [
         "GUID:6fca9c0eaa6a14b189136e4611780b56",
-        "GUID:ee1999ff30d5b4c34a4832b9af6201de"
+        "GUID:ee1999ff30d5b4c34a4832b9af6201de",
+        "GUID:47450684110bc7845a39db4ddb54c84d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
