wip orange in dogship

--- a/Assets/Gravitas/Scripts/gravitas-main.asmdef
+++ b/Assets/Gravitas/Scripts/gravitas-main.asmdef
@@ -6,7 +6,11 @@
         "GUID:ee1999ff30d5b4c34a4832b9af6201de",
         "GUID:47450684110bc7845a39db4ddb54c84d",
         "GUID:466e67dabd1db22468246c39eddb6c3f",
-        "GUID:3de88c88fbbb8f944b9210d496af9762"
+        "GUID:3de88c88fbbb8f944b9210d496af9762",
+        "GUID:34aa492b82754644eac2f903cd496268",
+        "GUID:71c08673113bf476ea5bd945e1f4a23c",
+        "GUID:15b8477193d324839a145a861b2c983a",
+        "GUID:c21a60a15edb64663af9bd55f8834863"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
