--- a/Assets/Gravitas/Scripts/gravitas-main.asmdef
+++ b/Assets/Gravitas/Scripts/gravitas-main.asmdef
@@ -10,7 +10,8 @@
         "GUID:34aa492b82754644eac2f903cd496268",
         "GUID:71c08673113bf476ea5bd945e1f4a23c",
         "GUID:15b8477193d324839a145a861b2c983a",
-        "GUID:c21a60a15edb64663af9bd55f8834863"
+        "GUID:c21a60a15edb64663af9bd55f8834863",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
