--- a/Assets/Gravitas/Scripts/gravitas-main.asmdef
+++ b/Assets/Gravitas/Scripts/gravitas-main.asmdef
@@ -11,7 +11,8 @@
         "GUID:71c08673113bf476ea5bd945e1f4a23c",
         "GUID:15b8477193d324839a145a861b2c983a",
         "GUID:c21a60a15edb64663af9bd55f8834863",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
